[BE] Add Delete User endpoint Fixes #25
